--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,19 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-</head>
-<body>
-    <h1>Form Data</h1>
-    <ul>
-        <% formData.forEach(data => { %>
-            <li>Name: <%= data.name %>, Email: <%= data.email %>, Message: <%= data.message %></li>
-        <% }) %>
-    </ul>
-</body>
-</html> -->
 <!DOCTYPE html>
 <html lang="en" class="antialiased">
   <head>
@@ -30,6 +14,12 @@
     <!--Replace with your tailwind.css once created-->
 
     <!--Regular Datatables CSS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"
       rel="stylesheet"
@@ -38,6 +28,10 @@
     <link
       href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css"
     />
 
     <style>
@@ -135,10 +129,73 @@
         background-color: #667eea !important;
         /*bg-indigo-500*/
       }
+      body {
+        font-family: "Ubuntu", sans-serif;
+      }
     </style>
   </head>
 
   <body class="bg-gray-100 text-gray-900 tracking-wider leading-normal">
+    <div class="relative">
+      <span
+        class="absolute text-white text-4xl top-5 left-4 cursor-pointer"
+        onclick="openSidebar()"
+      >
+        <i class="bi bi-filter-left px-2 bg-gray-900 rounded-md"></i>
+      </span>
+      <div
+        class="sidebar hidden lg:block fixed top-0 bottom-0 lg:left-0 p-2 w-[300px] overflow-y-auto text-center bg-gray-900 z-10"
+      >
+        <div class="text-gray-100 text-xl">
+          <div class="p-2.5 mt-1 flex items-center">
+            <div class="bg-white p-4">
+              <img
+                src="https://www.goalstreet.in/assets/LOG_GOAL-D2oMq8u7.png"
+              />
+            </div>
+            <i
+              class="bi bi-x cursor-pointer ml-28 lg:hidden"
+              onclick="openSidebar()"
+            ></i>
+          </div>
+          <div class="my-2 bg-gray-600 h-[1px]"></div>
+        </div>
+
+        <a
+          href="/dashboard"
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-house-door-fill"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold"
+            >Form Data</span
+          >
+        </a>
+        <a
+          href="/worktable"
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-person-workspace"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold"
+            >Work Data</span
+          >
+        </a>
+        <a
+          href="/workdata/add"
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-plus-circle-fill"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold">Add Work</span>
+        </a>
+        <div class="my-4 bg-gray-600 h-[1px]"></div>
+
+        <div
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-box-arrow-in-right"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold">Logout</span>
+        </div>
+      </div>
+    </div>
     <!--Container-->
     <div class="container w-full md:w-4/5 xl:w-3/5 mx-auto px-2">
       <!--Title-->
@@ -147,11 +204,14 @@
 		</h1> -->
 
       <!--Card-->
-      <div class="w-full  p-2 flex justify-end">
-        <a href="/download-excel" class="ml-auto bg-green-700 text-white  w-fit bg-red-500 mb-[20px] py-2 px-4"
-        >Download as Excel</a>
+      <div class="w-full p-2 flex justify-end">
+        <a
+          href="/download-excel"
+          class="ml-auto bg-green-700 text-white w-fit bg-red-500 mb-[20px] py-2 px-4"
+          >Download as Excel</a
+        >
       </div>
-      
+
       <div id="recipients" class="p-8 mt-6 lg:mt-0 rounded shadow bg-white">
         <table
           id="example"
@@ -181,10 +241,8 @@
               <td><%= data.secondDomain %></td>
             </tr>
             <% }) %>
-          
 
             <!-- Rest of your data (refer to https://datatables.net/examples/server_side/ for server side processing)-->
-
           </tbody>
         </table>
       </div>
@@ -211,6 +269,17 @@
           .columns.adjust()
           .responsive.recalc();
       });
+    </script>
+    <script type="text/javascript">
+      function dropdown() {
+        document.querySelector("#submenu").classList.toggle("hidden");
+        document.querySelector("#arrow").classList.toggle("rotate-0");
+      }
+      dropdown();
+
+      function openSidebar() {
+        document.querySelector(".sidebar").classList.toggle("hidden");
+      }
     </script>
   </body>
 </html>
