--- a/views/workedit.ejs
+++ b/views/workedit.ejs
@@ -1,19 +1,23 @@
-<!-- views/add-work-data.ejs -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edit Work Data</title>
+
+    <link
+      href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel=" stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
-    />
-    <link
-      href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel=" stylesheet"
     />
     <style>
       body {
@@ -21,158 +25,231 @@
       }
     </style>
   </head>
-  <body class="py-12">
-    <h1 class="text-center font-bold">Edit Work Data</h1>
-    <form
-      action="/works/edit/<%=formData._id%>"
-      method="POST"
-      class="max-w-sm mx-auto"
-    >
-      <div class="mb-5">
-        <label
-          for="jobName"
-          class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >Job Name</label
-        >
-        <input
-          type="text"
-          id="jobName"
-          name="jobName"
-          minlength="7"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          placeholder="Software Developer"
-          value="<%= formData.jobName || '' %>"
-          required
-        />
-        <% if (errors.jobName) { %>
-        <p class="text-sm text-right text-red-600"><%= errors.jobName %></p>
-        <% } %>
-      </div>
-      <div class="mb-5">
-        <label
-          for="companyName"
-          class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >Company Name</label
-        >
-        <input
-          type="text"
-          id="companyName"
-          name="companyName"
-          minlength="3"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          value="<%= formData.companyName || '' %>"
-          required
-          placeholder="Google"
-        />
-        <% if (errors.companyName) { %>
-        <p><%= errors.companyName.message %></p>
-        <% } %>
-      </div>
-      <div class="mb-5">
-        <label
-          for="domain"
-          class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >Domain</label
-        >
-        <input
-          type="text"
-          id="domain"
-          name="domain"
-          minlength="2"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          value="<%= formData.domain || '' %>"
-          required
-          placeholder="Devops"
-        />
-        <% if (errors.domain) { %>
-        <p><%= errors.domain.message %></p>
-        <% } %>
-      </div>
-      <div class="mb-5">
-        <label
-          for="salaryRange"
-          class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >Salary Range</label
-        >
-        <input
-          type="text"
-          id="salaryRange"
-          name="salaryRange"
-          minlength="4"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          value="<%= formData.salaryRange || '' %>"
-          required
-          placeholder="20000-30000"
-        />
-        <% if (errors.salaryRange) { %>
-        <p><%= errors.salaryRange %></p>
-        <% } %>
-      </div>
-      <div class="mb-5">
-        <label
-          for="officeType"
-          class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >Office Type</label
-        >
-        <input
-          type="text"
-          id="officeType"
-          name="officeType"
-          minlength="4"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          value="<%= formData.officeType || '' %>"
-          required
-          placeholder="Hybrid"
-        />
-        <% if (errors.officeType) { %>
-        <p><%= errors.officeType %></p>
-        <% } %>
-      </div>
-      <div class="mb-5">
-        <label
-          for="jobType"
-          class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >Job Type</label
-        >
-        <input
-          type="text"
-          id="jobType"
-          name="jobType"
-          minlength="4"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          value="<%= formData.jobType || '' %>"
-          required
-          placeholder="Internship"
-        />
-        <% if (errors.jobType) { %>
-        <p><%= errors.jobType %></p>
-        <% } %>
-      </div>
-      <div class="mb-5">
-        <label
-          for="jobDescription"
-          class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >jobDescription</label
-        >
-
-        <textarea
-          id="jobDescription"
-          name="jobDescription"
-          value="<%= formData.jobDescription || '' %>"
-          rows="4"
-          class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          placeholder="JOb Description Goes here"
-          minlength="20"
-        >
-        <%= formData.jobDescription %></textarea
-        >
-      </div>
-      <button
-        type="submit"
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+  <body class="">
+    <div class="relative">
+      <span
+        class="absolute text-white text-4xl top-5 left-4 cursor-pointer"
+        onclick="openSidebar()"
       >
-        Update
-      </button>
-    </form>
+        <i class="bi bi-filter-left px-2 bg-gray-900 rounded-md"></i>
+      </span>
+      <div
+        class="sidebar hidden lg:block fixed top-0 bottom-0 lg:left-0 p-2 w-[300px] overflow-y-auto text-center bg-gray-900 z-10"
+      >
+        <div class="text-gray-100 text-xl">
+          <div class="p-2.5 mt-1 flex items-center">
+            <div class="bg-white p-4">
+              <img
+                src="https://www.goalstreet.in/assets/LOG_GOAL-D2oMq8u7.png"
+              />
+            </div>
+            <i
+              class="bi bi-x cursor-pointer ml-28 lg:hidden"
+              onclick="openSidebar()"
+            ></i>
+          </div>
+          <div class="my-2 bg-gray-600 h-[1px]"></div>
+        </div>
+
+        <a
+          href="/dashboard"
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-house-door-fill"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold"
+            >Form Data</span
+          >
+        </a>
+        <a
+          href="/worktable"
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-person-workspace"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold"
+            >Work Data</span
+          >
+        </a>
+        <a
+          href="/workdata/add"
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-plus-circle-fill"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold">Add Work</span>
+        </a>
+        <div class="my-4 bg-gray-600 h-[1px]"></div>
+
+        <div
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-box-arrow-in-right"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold">Logout</span>
+        </div>
+      </div>
+    </div>
+    <div class="py-12 px-6  lg:mt-0">
+      <h1 class="text-center font-bold mt-12">Edit Work Data</h1>
+      <form
+        action="/works/edit/<%=formData._id%>"
+        method="POST"
+        class="max-w-sm mx-auto"
+      >
+        <div class="mb-5">
+          <label
+            for="jobName"
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+            >Job Name</label
+          >
+          <input
+            type="text"
+            id="jobName"
+            name="jobName"
+            minlength="7"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            placeholder="Software Developer"
+            value="<%= formData.jobName || '' %>"
+            required
+          />
+          <% if (errors.jobName) { %>
+          <p class="text-sm text-right text-red-600"><%= errors.jobName %></p>
+          <% } %>
+        </div>
+        <div class="mb-5">
+          <label
+            for="companyName"
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+            >Company Name</label
+          >
+          <input
+            type="text"
+            id="companyName"
+            name="companyName"
+            minlength="3"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            value="<%= formData.companyName || '' %>"
+            required
+            placeholder="Google"
+          />
+          <% if (errors.companyName) { %>
+          <p><%= errors.companyName.message %></p>
+          <% } %>
+        </div>
+        <div class="mb-5">
+          <label
+            for="domain"
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+            >Domain</label
+          >
+          <input
+            type="text"
+            id="domain"
+            name="domain"
+            minlength="2"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            value="<%= formData.domain || '' %>"
+            required
+            placeholder="Devops"
+          />
+          <% if (errors.domain) { %>
+          <p><%= errors.domain.message %></p>
+          <% } %>
+        </div>
+        <div class="mb-5">
+          <label
+            for="salaryRange"
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+            >Salary Range</label
+          >
+          <input
+            type="text"
+            id="salaryRange"
+            name="salaryRange"
+            minlength="4"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            value="<%= formData.salaryRange || '' %>"
+            required
+            placeholder="20000-30000"
+          />
+          <% if (errors.salaryRange) { %>
+          <p><%= errors.salaryRange %></p>
+          <% } %>
+        </div>
+        <div class="mb-5">
+          <label
+            for="officeType"
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+            >Office Type</label
+          >
+          <input
+            type="text"
+            id="officeType"
+            name="officeType"
+            minlength="4"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            value="<%= formData.officeType || '' %>"
+            required
+            placeholder="Hybrid"
+          />
+          <% if (errors.officeType) { %>
+          <p><%= errors.officeType %></p>
+          <% } %>
+        </div>
+        <div class="mb-5">
+          <label
+            for="jobType"
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+            >Job Type</label
+          >
+          <input
+            type="text"
+            id="jobType"
+            name="jobType"
+            minlength="4"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            value="<%= formData.jobType || '' %>"
+            required
+            placeholder="Internship"
+          />
+          <% if (errors.jobType) { %>
+          <p><%= errors.jobType %></p>
+          <% } %>
+        </div>
+        <div class="mb-5">
+          <label
+            for="jobDescription"
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+            >jobDescription</label
+          >
+
+          <textarea
+            id="jobDescription"
+            name="jobDescription"
+            value="<%= formData.jobDescription || '' %>"
+            rows="4"
+            class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            placeholder="JOb Description Goes here"
+            minlength="20"
+          >
+        <%= formData.jobDescription %></textarea
+          >
+        </div>
+        <button
+          type="submit"
+          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        >
+          Update
+        </button>
+      </form>
+    </div>
+    <script type="text/javascript">
+      function dropdown() {
+        document.querySelector("#submenu").classList.toggle("hidden");
+        document.querySelector("#arrow").classList.toggle("rotate-0");
+      }
+      dropdown();
+
+      function openSidebar() {
+        document.querySelector(".sidebar").classList.toggle("hidden");
+      }
+    </script>
   </body>
 </html>
