--- a/views/worktable.ejs
+++ b/views/worktable.ejs
@@ -17,6 +17,16 @@
       href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
 
     <style>
       /*Overrides for Tailwind CSS */
@@ -78,7 +88,9 @@
         border: 1px solid transparent;
         /*border border-transparent*/
       }
-
+      body {
+        font-family: "Ubuntu", sans-serif;
+      }
       /*Pagination Buttons - Hover */
       .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
         color: #fff !important;
@@ -115,7 +127,67 @@
       }
     </style>
   </head>
-  <body class="bg-gray-100 text-gray-900 tracking-wider leading-normal">
+  <body class="bg-gray-100 text-gray-900 tracking-wider leading-normal z-0">
+    <div class="relative">
+      <span
+        class="absolute text-white text-4xl top-5 left-4 cursor-pointer"
+        onclick="openSidebar()"
+      >
+        <i class="bi bi-filter-left px-2 bg-gray-900 rounded-md"></i>
+      </span>
+      <div
+        class="sidebar hidden lg:block fixed top-0 bottom-0 lg:left-0 p-2 w-[300px] overflow-y-auto text-center bg-gray-900 z-10"
+      >
+        <div class="text-gray-100 text-xl">
+          <div class="p-2.5 mt-1 flex items-center">
+            <div class="bg-white p-4">
+              <img
+                src="https://www.goalstreet.in/assets/LOG_GOAL-D2oMq8u7.png"
+              />
+            </div>
+            <i
+              class="bi bi-x cursor-pointer ml-28 lg:hidden"
+              onclick="openSidebar()"
+            ></i>
+          </div>
+          <div class="my-2 bg-gray-600 h-[1px]"></div>
+        </div>
+
+        <a
+          href="/dashboard"
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-house-door-fill"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold"
+            >Form Data</span
+          >
+        </a>
+        <a
+          href="/worktable"
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-person-workspace"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold"
+            >Work Data</span
+          >
+        </a>
+        <a
+          href="/workdata/add"
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-plus-circle-fill"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold">Add Work</span>
+        </a>
+        <div class="my-4 bg-gray-600 h-[1px]"></div>
+
+        <div
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-box-arrow-in-right"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold">Logout</span>
+        </div>
+      </div>
+    </div>
     <!--Container-->
     <div class="container w-full md:w-4/5 xl:w-3/5 mx-auto px-2">
       <!--Title-->
@@ -126,9 +198,9 @@
       <!--Card-->
       <div class="w-full p-2 flex justify-end">
         <a
-          href="/download-excel"
+          href="/workdata/add"
           class="ml-auto bg-green-700 text-white w-fit bg-red-500 mb-[20px] py-2 px-4"
-          >Download as Excel</a
+          >Add New Work</a
         >
       </div>
 
@@ -190,6 +262,17 @@
           .columns.adjust()
           .responsive.recalc();
       });
+    </script>
+    <script type="text/javascript">
+      function dropdown() {
+        document.querySelector("#submenu").classList.toggle("hidden");
+        document.querySelector("#arrow").classList.toggle("rotate-0");
+      }
+      dropdown();
+
+      function openSidebar() {
+        document.querySelector(".sidebar").classList.toggle("hidden");
+      }
     </script>
   </body>
 </html>
