--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -133,6 +133,38 @@
         font-family: "Ubuntu", sans-serif;
       }
     </style>
+    <script>
+      // Function to check if a cookie exists
+      function getCookie(name) {
+        const cookies = document.cookie.split(";");
+        for (let i = 0; i < cookies.length; i++) {
+          const cookie = cookies[i].trim();
+          if (cookie.startsWith(name + "=")) {
+            return cookie.substring(name.length + 1);
+          }
+        }
+        return null;
+      }
+
+      // Check if the authentication cookie exists
+      const authToken = getCookie("auth");
+
+      // If auth token exists, append it to the URL
+      if (authToken) {
+        const currentUrl = window.location.href;
+        const separator = currentUrl.includes("?") ? "&" : "?";
+        if (!currentUrl.includes("authtoken=")) {
+          const newUrl =
+            currentUrl +
+            separator +
+            "authtoken=" +
+            encodeURIComponent(authToken);
+          window.location.href = newUrl;
+        }
+
+        // Redirect to the new URL
+      }
+    </script>
   </head>
 
   <body class="bg-gray-100 text-gray-900 tracking-wider leading-normal">
@@ -162,6 +194,7 @@
         </div>
 
         <a
+          id="dashboardLink"
           href="/dashboard"
           class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
         >
@@ -171,6 +204,7 @@
           >
         </a>
         <a
+          id="dashboardLinkOne"
           href="/worktable"
           class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
         >
@@ -180,6 +214,7 @@
           >
         </a>
         <a
+          id="dashboardLinkTwo"
           href="/workdata/add"
           class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
         >
@@ -188,12 +223,13 @@
         </a>
         <div class="my-4 bg-gray-600 h-[1px]"></div>
 
-        <div
+        <a
+          href="/logout"
           class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
         >
           <i class="bi bi-box-arrow-in-right"></i>
           <span class="text-[15px] ml-4 text-gray-200 font-bold">Logout</span>
-        </div>
+        </a>
       </div>
     </div>
     <!--Container-->
