--- a/views/worktable.ejs
+++ b/views/worktable.ejs
@@ -267,9 +267,21 @@
               <td><%= data.officeType %></td>
               <td><%= data.jobType %></td>
               <td>
-                <a href="/works/edit/<%= data._id %>" class=""> Edit </a>
+                <a
+                  href="/works/edit/<%= data._id %>"
+                  class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
+                >
+                  Edit
+                </a>
               </td>
-              <td>Delete</td>
+              <td>
+                <a
+                  href="/works/delete/<%= data._id %>"
+                  class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"
+                >
+                  Delete
+                </a>
+              </td>
             </tr>
             <% }) %>
 
