--- a/views/worktable.ejs
+++ b/views/worktable.ejs
@@ -239,7 +239,10 @@
         >
       </div>
 
-      <div id="recipients" class="p-8 mt-6 lg:mt-0 rounded shadow bg-white">
+      <div
+        id="recipients"
+        class="p-8 mt-6 lg:mt-0 rounded shadow bg-white"
+      >
         <table
           id="example"
           class="stripe hover"
@@ -250,7 +253,7 @@
               <th data-priority="1">Name</th>
               <th data-priority="2">Company</th>
               <th data-priority="2">Domain</th>
-              <th data-priority="3">Date</th>
+           
               <th data-priority="4">Office Type</th>
               <th data-priority="5">Job Type</th>
               <th data-priority="6"></th>
@@ -263,7 +266,7 @@
               <td><%= data.jobName %></td>
               <td><%= data.companyName %></td>
               <td><%= data.domain %></td>
-              <td><%= data.postedDate %></td>
+       
               <td><%= data.officeType %></td>
               <td><%= data.jobType %></td>
               <td>
