--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -195,7 +195,7 @@
 
         <a
           id="dashboardLink"
-          href="/dashboard"
+          href="<%= `/dashboard?authtoken=${authToken}` %>"
           class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
         >
           <i class="bi bi-house-door-fill"></i>
@@ -205,7 +205,7 @@
         </a>
         <a
           id="dashboardLinkOne"
-          href="/worktable"
+          href="<%= `/worktable?authtoken=${authToken}` %>"
           class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
         >
           <i class="bi bi-person-workspace"></i>
@@ -214,8 +214,16 @@
           >
         </a>
         <a
+          id="dashboardLinkOne"
+          href="<%= `/hrFormPage?authtoken=${authToken}` %>"
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-people-fill"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold">Hr Data</span>
+        </a>
+        <a
           id="dashboardLinkTwo"
-          href="/workdata/add"
+          href="<%= `/workdata/add?authtoken=${authToken}` %>"
           class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
         >
           <i class="bi bi-plus-circle-fill"></i>
@@ -224,7 +232,7 @@
         <div class="my-4 bg-gray-600 h-[1px]"></div>
 
         <a
-          href="/logout"
+        href="<%= `/logout?authtoken=${authToken}` %>"
           class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
         >
           <i class="bi bi-box-arrow-in-right"></i>
