--- a/views/worktable.ejs
+++ b/views/worktable.ejs
@@ -154,7 +154,6 @@
             encodeURIComponent(authToken);
           window.location.href = newUrl;
         }
-        // Redirect to the new URL
       }
     </script>
   </head>
@@ -186,7 +185,7 @@
 
         <a
           id="dashboardLink"
-          href="/dashboard"
+          href="<%= `/dashboard?authtoken=${authToken}` %>"
           class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
         >
           <i class="bi bi-house-door-fill"></i>
@@ -196,7 +195,7 @@
         </a>
         <a
           id="dashboardLinkOne"
-          href="/worktable"
+          href="<%= `/worktable?authtoken=${authToken}` %>"
           class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
         >
           <i class="bi bi-person-workspace"></i>
@@ -205,8 +204,16 @@
           >
         </a>
         <a
+          id="dashboardLinkOne"
+          href="<%= `/hrFormPage?authtoken=${authToken}` %>"
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-people-fill"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold">Hr Data</span>
+        </a>
+        <a
           id="dashboardLinkTwo"
-          href="/workdata/add"
+          href="<%= `/workdata/add?authtoken=${authToken}` %>"
           class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
         >
           <i class="bi bi-plus-circle-fill"></i>
@@ -215,7 +222,7 @@
         <div class="my-4 bg-gray-600 h-[1px]"></div>
 
         <a
-          href="/logout"
+          href="<%= `/logout?authtoken=${authToken}` %>"
           class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
         >
           <i class="bi bi-box-arrow-in-right"></i>
@@ -239,10 +246,7 @@
         >
       </div>
 
-      <div
-        id="recipients"
-        class="p-8 mt-6 lg:mt-0 rounded shadow bg-white"
-      >
+      <div id="recipients" class="p-8 mt-6 lg:mt-0 rounded shadow bg-white">
         <table
           id="example"
           class="stripe hover"
@@ -253,7 +257,7 @@
               <th data-priority="1">Name</th>
               <th data-priority="2">Company</th>
               <th data-priority="2">Domain</th>
-           
+
               <th data-priority="4">Office Type</th>
               <th data-priority="5">Job Type</th>
               <th data-priority="6"></th>
@@ -266,12 +270,12 @@
               <td><%= data.jobName %></td>
               <td><%= data.companyName %></td>
               <td><%= data.domain %></td>
-       
+
               <td><%= data.officeType %></td>
               <td><%= data.jobType %></td>
               <td>
                 <a
-                  href="/works/edit/<%= data._id %>"
+                  href="/works/edit/<%= data._id %>?authtoken=<%= authToken %>"
                   class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
                 >
                   Edit
@@ -279,7 +283,7 @@
               </td>
               <td>
                 <a
-                  href="/works/delete/<%= data._id %>"
+                  href="/works/delete/<%= data._id %>?authtoken=<%= authToken %>"
                   class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"
                 >
                   Delete
