--- a/views/PageNotFound.ejs
+++ b/views/PageNotFound.ejs
@@ -219,6 +219,14 @@
           <i class="bi bi-people-fill"></i>
           <span class="text-[15px] ml-4 text-gray-200 font-bold">Hr Data</span>
         </a>
+<a
+          id="dashboardLinkOne"
+          href="<%= `/collegeData?authtoken=${authToken}` %>"
+          class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+        >
+          <i class="bi bi-building"></i>
+          <span class="text-[15px] ml-4 text-gray-200 font-bold">College Data</span>
+        </a>
         <a
           id="dashboardLinkTwo"
           href="<%= `/workdata/add?authtoken=${authToken}` %>"
